# ai-csv-translator-xliff

./: .env.example  .gitignore  IMPLEMENTATION_NOTES.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
config/: languages.yaml  lqa_criteria.yaml  translation_prompts.yaml
docs/: API_REFERENCE.md  ARCHITECTURE.md  TMS_INTEGRATION.md  USER_GUIDE.md
examples/: sample_config.yaml  sample_input.csv
src/: __init__.py  main.py
src/converters/: csv_reader.py  xliff_generator.py  xliff_importer.py
src/lqa/: ai_evaluator.py  metrics_calculator.py  report_generator.py
src/tms/: base_tms.py  crowdin_integration.py  phrase_integration.py
src/translators/: ai_translator.py  batch_processor.py  language_config.py
src/utils/: config_manager.py  logger.py  validators.py
tests/: test_basic.py
